--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,36 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  h5 {
+    @apply absolute px-6 duration-200 w-52 bottom-4 md:bottom-8
+    group-hover:scale-110 group-hover:text-black;
+  }
+}
+
+.item-container {
+  @apply grid grid-rows-1 md:grid-cols-4 gap-6 text-2xl text-white uppercase;
+}
+
+.item {
+  @apply relative overflow-hidden;
+}
+
+.item-gradient {
+  @apply absolute top-0 bottom-0 right-0 left-0 bg-gradient-to-b from-transparent
+  to-gray-900 group-hover:from-gray-50 group-hover:to-white
+  group-hover:opacity-70;
+}
 
 #main {
-  background-image: url('./images/desktop/image-hero.jpg');
+  background-image: url("./images/desktop/image-hero.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 @media (max-width: 576px) {
   #main {
-    backround-image: url('./images/mobile/image-hero.jpg');
+    backround-image: url("./images/mobile/image-hero.jpg");
     background-position: center;
   }
 }
